--- a/game.html
+++ b/game.html
@@ -16,19 +16,13 @@
 	<script>
 
 	// 第一部分
+	var log = console.log.bind(console)
 
-  var imageFromPath = function(path){
+	var imageFromPath = function(path){
 		var img = new Image()
 		img.src = path
 		return	img
 	}
-
- //为何不需要
-	// log(img)
-	// img.onload = function(){
-	// 	context.drawImage(img, x, y)
-	// }
-
 
 // paddle 的逻辑应该放在paddle对象里去操作 其实例
 	var Paddle = function(){
@@ -46,20 +40,90 @@
 		o.moveRight = function(){
 			o.x += o.speed
 		}
+
+		o.collide = function(ball) {
+				if (ball.y + ball.image.height > o.y) {
+						if (ball.x > o.x && ball.x < o.x + o.image.width) {
+								log('相撞')
+								return true
+						}
+				}
+				return false
+		}
+
 		return o
 	}
 
+	var Ball = function(){
+		var img = imageFromPath('ball.png')
+		var o = {
+			image:img,
+			x:100,
+			y:250,
+			speedX:20,
+			speedY:20,
+			fired:false,
+		}
+		o.fire = function() {
+			o.fired = true
+		}
+		o.move = function() {
+			if(o.fired){
+				log("move")
+				// log('move')
+				if (o.x < 0 || o.x > 400) {
+						o.speedX = -o.speedX
+				}
+				if (o.y < 0 || o.y > 300) {
+						o.speedY = -o.speedY
+				}
+				// move
+				o.x += o.speedX
+				o.y += o.speedY
+			}
+		}
+		return o
+	}
 
 	var Game = function(){
-		var g = {}
+		var g = {
+				actions: {},
+				keydowns: {},
+		}
 
 		var canvas = document.querySelector('#id-canvas')
 		var context = canvas.getContext('2d')
 
 		g.canvas = canvas
 		g.context = context
+		g.drawImage = function(guaImage){
+			g.context.drawImage(guaImage.image, guaImage.x, guaImage.y)
+		}
 
+		//events
+		window.addEventListener('keydown', function(event){
+			g.keydowns[event.key] = true
+		})
+
+		window.addEventListener('keyup', function(event){
+			g.keydowns[event.key] = false
+		})
+
+		g.registerAction = function(key, callback){
+			g.actions[key] = callback
+		}
+
+		//timer
 		setInterval (function(){
+			//events input
+			var actions = Object.keys(g.actions)
+			for (var i = 0; i < actions.length; i++) {
+			 var key = actions[i]
+			 if(g.keydowns[key]){
+				 // 如果有按键被按下 调用注册的action
+				  g.actions[key]
+			 }
+			}
 			//updata
 			g.update()
 			//clear\
@@ -72,59 +136,38 @@
 	}
 
 	var __main = function () {
-
-		var log = console.log.bind(console)
-
-
 		var paddle = Paddle()
 		var game = Game()
+    var ball = Ball()
+		log('begin')
+		// var leftDown = false
+		// var rightDown = false
 
-
-		var leftDown = false
-		var rightDown = false
-
-		//events
-		window.addEventListener('keydown', function(event){
-			log('keydown')
-			var k = event.key
-			if (k == 'a'){
-				leftDown = true
-			}else if(k == 'd'){
-				rightDown = true
-			}
-
+    game.registerAction('a', function(){
+			paddle.moveLeft()
 		})
-
-		window.addEventListener('keyup', function(event){
-			log('keyup')
-			var k = event.key
-			if (k == 'a'){
-				leftDown = false
-			}else if(k == 'd'){
-				rightDown = false
-			}
-
+		game.registerAction('d', function(){
+			paddle.moveRight()
+		})
+		game.registerAction('f', function(){
+		  ball.fire()
 		})
 
 		game.update = function(){
-			if (leftDown){
-				// paddle.x -= paddle.speed
-				paddle.moveLeft()
-			}else if(rightDown){
-				paddle.moveRight()
-				// paddle.x += paddle.speed
+			ball.move()
+			if (paddle.collide(ball)) {
+					// 这里应该调用一个 ball.反弹() 来实现
+					ball.speedY *= -1
 			}
 		}
 
 		game.draw = function(){
-				game.context.drawImage(paddle.image, paddle.x, paddle.y)
+				//draw
+				game.drawImage(paddle)
+				game.drawImage(ball)
 		}
 
-		// setInterval(function(){
-		//
-		// 	log(paddle)
-		//
-		// }, 1000/30)
+
 
 	}
 
